<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_lo"
        android:src="@drawable/long_register"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ed_uername"
        android:hint="@string/logn_username"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/ed_password"
        android:layout_marginTop="20dp"
        android:hint="@string/login_userpassword"
        android:layout_below="@+id/ed_uername"
        android:layout_alignStart="@+id/ed_uername" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_welcom"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/ed_uername" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:id="@+id/btn_login"
        android:layout_above="@+id/btn_register"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_register_btn"
        android:id="@+id/btn_register"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>